Fixed pom.xml which overwriting plugin-starter basic configuration